--- a/package.json
+++ b/package.json
@@ -1,38 +1,26 @@
 {
-  "name": "next-movies",
-  "version": "0.1.0",
-  "private": true,
+  "name": "next-test",
+  "version": "1.0.0",
+  "description": "",
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "test:unit": "vue-cli-service test:unit",
-    "test:e2e": "vue-cli-service test:e2e",
-    "lint": "vue-cli-service lint"
+    "start": "node server/server.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/next-insurance/next-test.git"
+  },
+  "keywords": [
+    "next"
+  ],
+  "author": "Nitsan Zohar",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/next-insurance/next-test/issues"
+  },
+  "homepage": "https://github.com/next-insurance/next-test#readme",
   "dependencies": {
-    "axios": "^0.21.1",
-    "core-js": "^3.6.5",
-    "vue": "^2.6.11",
-    "vue-js-modal": "^2.0.0-rc.6",
-    "vue-router": "^3.5.1",
-    "vue-select": "^3.11.2",
-    "vuex": "^3.4.0"
-  },
-  "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-e2e-cypress": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-unit-jest": "~4.5.0",
-    "@vue/cli-plugin-vuex": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "@vue/eslint-config-airbnb": "^5.0.2",
-    "@vue/test-utils": "^1.0.3",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "node-sass": "^4.12.0",
-    "sass-loader": "^8.0.2",
-    "vue-template-compiler": "^2.6.11"
+    "express": "^4.17.1",
+    "morgan": "^1.10.0",
+    "path": "^0.12.7"
   }
 }
