--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-js-modal": "^2.0.0-rc.6",
+    "vue-lazyload": "^1.3.3",
     "vue-router": "^3.5.1",
     "vue-select": "^3.11.2",
     "vuex": "^3.4.0"
